Output separate bundle with style info

--- a/css/app.less
+++ b/css/app.less
@@ -1,5 +1,5 @@
-@blue: #5b83ad;
+@borderColor: #42219e;
 h1.contacts {
-  border: 3px solid @blue;
+  border: 25px solid @borderColor;
   padding: 15px;
 }
